Fixing overlap of Quick Links with Topics slider; fixing hidden titles in IE11 for slider

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -6972,11 +6972,11 @@ a[href*="http"] .article-header__date {
 
 .field-gallery-items .slick-next {
   background: url("/themes/custom/ucsf/assets/images/cta-arrow-white.svg") no-repeat center center/12px 12px #007cbe;
-  right: 0; }
+  right: 35px; }
 
 .field-gallery-items .slick-prev {
   background: url("/themes/custom/ucsf/assets/images/cta-arrow-white-left.svg") no-repeat center center/12px 12px #007cbe;
-  left: 0; }
+  left: 35px; }
 
 .field-gallery-items button {
   top: calc(50% - 100px); }
@@ -8119,10 +8119,10 @@ a[href*="http"] .article-header__date {
       content: none; }
   .topics-list__topics.slick-slider .slick-next {
     background: url("/themes/custom/ucsf/assets/images/cta-arrow-white.svg") no-repeat center center/12px 12px #007cbe;
-    right: 0; }
+    right: 35px; }
   .topics-list__topics.slick-slider .slick-prev {
     background: url("/themes/custom/ucsf/assets/images/cta-arrow-white-left.svg") no-repeat center center/12px 12px #007cbe;
-    left: 0; }
+    left: 35px; }
   .topics-list__topics.slick-slider .slick-slide {
     width: 340px; }
   .topics-list__topics.slick-slider .topic-card span {
@@ -9199,11 +9199,11 @@ a.video_preview::before {
 
 #block-youtubegallery .slick-next {
   background: url("/themes/custom/ucsf/assets/images/cta-arrow-white.svg") no-repeat center center/12px 12px #007cbe;
-  right: 0; }
+  right: 35px; }
 
 #block-youtubegallery .slick-prev {
   background: url("/themes/custom/ucsf/assets/images/cta-arrow-white-left.svg") no-repeat center center/12px 12px #007cbe;
-  left: 0; }
+  left: 35px; }
 
 #block-youtubegallery .slick-slider {
   margin: 0;
@@ -9752,6 +9752,10 @@ a.video_preview::before {
       display: none; }
     .explorer .topic-card {
       margin-bottom: 0px; }
+      .explorer .topic-card span {
+        bottom: 0; }
+        .explorer .topic-card span:hover {
+          bottom: 0; }
     .explorer .latest-events-list {
       float: left;
       width: 100%;
@@ -10177,7 +10181,6 @@ a.video_preview::before {
           padding-left: 80px; } }
   @media all and (-ms-high-contrast: none) and (min-width: 1050px), (-ms-high-contrast: active) and (min-width: 1050px) {
     .explorer .layout-columns__3 {
-      overflow: auto;
       clear: both; }
       .explorer .layout-columns__3 .field-content-wrapper-content .layout-column {
         float: left;
