--- a/docroot/themes/custom/ucsf/scss/explorer/_explorer.scss
+++ b/docroot/themes/custom/ucsf/scss/explorer/_explorer.scss
@@ -285,6 +285,14 @@
 
     .topic-card {
       margin-bottom: 0px;
+
+      span {
+        bottom: 0;
+
+        &:hover {
+          bottom: 0;
+        }
+      }
     }
 
 
@@ -812,7 +820,6 @@
     @include breakpoint($new-large) {
 
       .layout-columns__3 {
-        overflow: auto;
         clear:both;
           .field-content-wrapper-content .layout-column {
             float: left;
