--- a/docroot/themes/custom/ucsf/scss/tools/_mixins.scss
+++ b/docroot/themes/custom/ucsf/scss/tools/_mixins.scss
@@ -195,12 +195,12 @@
 
   .slick-next {
     @include background-image('cta-arrow-white.svg', center center/12px 12px , $c-blue);
-    right: 0;
+    right: 35px;
   }
 
   .slick-prev {
     @include background-image('cta-arrow-white-left.svg', center center/12px 12px , $c-blue);
-    left: 0;
+    left: 35px;
   }
 
 }
